--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="#page-top">Guard Dog by SKAD</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -76,7 +76,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/biz-brand_guard-dog.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Start Guard Dog</span>
+                        <span class="name">Guard Dog</span>
                         <hr class="star-light">
                         <span class="skills">Serve - Protect - Uphold</span>
                     </div>
