Add reboot step after setting wifi password in headless setup mode

--- a/html/headlesswifisetup/index.html
+++ b/html/headlesswifisetup/index.html
@@ -591,6 +591,13 @@ var formHTML = `
 							//alert(JSON.stringify(data));
 							$("#wifis").empty();
 							$("#wifis").append(data["msg"]);
+					
+							// Now reboot the pi
+							$.getJSON("php/exec.php?script=reboot", 
+							function(data) {
+								//alert(JSON.stringify(data));
+							});
+						});
 					});
 				});
 			}	
