--- a/html/headlesswifisetup/index.html
+++ b/html/headlesswifisetup/index.html
@@ -110,7 +110,7 @@ var formHTML = `
   </fieldset>
   <fieldset class='form-group'>
     <label for='exampleInputPassword1'>Password</label>
-    <input type='password' class='form-control' id='wifiPassword' placeholder='Password'>
+    <input type='text' class='form-control' id='wifiPassword' placeholder='Password'>
   </fieldset>
   <button id="wifiSubmit" type='button' class='btn btn-primary'>Submit</button>
 </form>
