--- a/html/guarddog.secure/index.html
+++ b/html/guarddog.secure/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Guard Dog by SKAD</title>
+    <title>Defender Dog by SKAD</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -44,7 +44,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#page-top">Guard Dog by SKAD</a>
+                <a class="navbar-brand" href="#page-top">Defender Dog by SKAD</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -76,11 +76,11 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/biz-brand_guard-dog.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Guard Dog</span>
+                        <span class="name">Defender Dog</span>
                         <hr class="star-light">
                         <span class="skills">Serve - Protect - Uphold</span>
                     </div>
-		    <div id="serverConfigs">Congratulations your Guard Dog is now secure!!</div>
+		    <div id="serverConfigs">Congratulations your Defender Dog is now secure!!</div>
                 </div>
             </div>
         </div>
@@ -543,7 +543,7 @@
 			
 			if (data["servers"].length == 0)
 			{
-				$("#serverConfigs").append("<button id='setupGuardDog' class='btn btn-primary'>Click here to set up Guard Dog</button>");
+				$("#serverConfigs").append("<button id='setupGuardDog' class='btn btn-primary'>Click here to set up Defender Dog</button>");
 
 			}
 			else
