--- a/html/headlesswifisetup/index.html
+++ b/html/headlesswifisetup/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Guard Dog by SKAD</title>
+    <title>Defender Dog by SKAD</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,7 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                <a class="navbar-brand" href="#page-top">Guard Dog by SKAD</a>
+                <a class="navbar-brand" href="#page-top">Defender Dog by SKAD</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -61,7 +61,7 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/biz-brand_guard-dog.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Guard Dog</span>
+                        <span class="name">Defender Dog</span>
                         <hr class="star-light">
                         <span class="skills">Serve - Protect - Uphold</span>
                     </div>
